corpus/tags.txt
================================================================================
tag: basic
================================================================================
*foobar*


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (tag
        (word)))))

================================================================================
tag in text
================================================================================
*tag* in text


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (tag
        (word))
      (word)
      (word))))

================================================================================
tag with lines after
================================================================================
*foo*
Hello


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (tag
        (word)))
    (line
      (word))))

================================================================================
tag on the right
================================================================================
							*inclusion*


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (tag
        (word)))))

================================================================================
optionlink in tag
================================================================================
*'option'*


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (tag
        (word)))))

================================================================================
NOT a tag
================================================================================
* bullet1
  * bullet2 bullet2

0 \* escaped
0 (paren *)
1	"*" not
2   * 	not
3this *not no

4this *is not* a tag


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word))
    (line
      (word)
      (word)
      (word)))
  (block
    (line
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word)
      (tag
        (word)
        (MISSING "*")))
    (line
      (word)
      (word)
      (word))
    (line
      (word)
      (word)
      (word))
    (line
      (word)
      (tag
        (word)
        (MISSING "*"))
      (word)))
  (block
    (line
      (word)
      (tag
        (word)
        (MISSING "*"))
      (word)
      (word)
      (word))))
