corpus/url.txt
================================================================================
url
================================================================================
url in text https://neovim.io/doc/user/#yay more here bro
text text
  https://neovim.io/doc/user/#yay  
x (https://neovim.io/doc/user/#yay) https://neovim.io/doc/user/#yay


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (word)
      (word)
      (url
        (word))
      (word)
      (word)
      (word))
    (line
      (word)
      (word))
    (line
      (url
        (word)))
    (line
      (word)
      (word)
      (url
        (word)))))

================================================================================
url with parens (FIXME)
================================================================================
text

url: (https://neovim.io/doc/user/(foo)#yay)
markdown: [https://neovim.io/doc/user/#yay](https://neovim.io/doc/user/#yay).


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)))
  (block
    (line
      (word)
      (word))
    (line
      (word)
      (word))))
