test/corpus/argument_optional.txt
================================================================================
optional [argument]
================================================================================
:ar[gs]! [++opt] [+cmd] {arglist}			*:args_f!*
:[count]arge[dit][!] [++opt] [+cmd] {name} ..


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (optional)
      (word)
      (optional)
      (optional)
      (argument
        (word))
      (tag
        (word)))
    (line
      (word)
      (optional)
      (word)
      (optional)
      (optional)
      (optional)
      (optional)
      (argument
        (word))
      (word))))
