test/corpus/codespan.txt
================================================================================
simple codespan
================================================================================

a `foobar` b `:echo`


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (codespan
        (word))
      (word)
      (codespan
        (word)))))

================================================================================
codespan in text
================================================================================

Hello `world`, I am `markup language`. But `this is
an error`.


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (word)
      (codespan
        (word))
      (word)
      (word)
      (word)
      (codespan
        (word))
      (word)
      (word)
      (codespan
        (word)
        (MISSING "`")))
    (line
      (word)
      (word)
      (word))))

================================================================================
NOT codespan
================================================================================
				*'* *'a* *`* *`a*
				*g'* *g'a* *g`* *g`a*
g'{mark}  g`{mark}


--------------------------------------------------------------------------------

(help_file
  (block
    (line
      (tag
        (word))
      (tag
        (word))
      (tag
        (word))
      (tag
        (word)))
    (line
      (tag
        (word))
      (tag
        (word))
      (tag
        (word))
      (tag
        (word)))
    (line
      (word)
      (word))))
